refactor(expression): 修正操作符枚举常量命名
- 修正了大于操作符的枚举名称从 GE 到 GT
- 修正了小于操作符的枚举名称从 LE 到 LT
- 修正了大于等于操作符的枚举名称从 GET 到 GE
- 修正了小于等于操作符的枚举名称从 LET 到 LE
- 为websocket模块添加jackson-datatype-jsr310测试依赖